src/test/ui/rfc-2632-const-trait-impl/const-default-method-bodies.stderr
error[E0277]: the trait bound `NonConstImpl: ~const ConstDefaultFn` is not satisfied
  --> $DIR/const-default-method-bodies.rs:24:5
   |
LL |     NonConstImpl.a();
   |     ^^^^^^^^^^^^ - required by a bound introduced by this call
   |     |
   |     the trait `~const ConstDefaultFn` is not implemented for `NonConstImpl`
   |
note: the trait `ConstDefaultFn` is implemented for `NonConstImpl`, but that implementation is not `const`
  --> $DIR/const-default-method-bodies.rs:24:5
   |
LL |     NonConstImpl.a();
   |     ^^^^^^^^^^^^
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | const fn test() where NonConstImpl: ~const ConstDefaultFn {
   |                 +++++++++++++++++++++++++++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
